sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: home-media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels: 
        app: sonarr
    spec:
      containers:
        - name: sonarr-container
          image: linuxserver/sonarr
          imagePullPolicy: IfNotPresent
          ports: 
            - containerPort: 8989
          volumeMounts:
            - name: "media-pv"
              mountPath: /config
              subPath: configs/sonarr #path /mnt/mediavolume/configs/sonarr where sonarr writes the configurations
            # - name: "media-pv"
              # mountPath: /downloads/transmission
              # subPath: downloads/transmission # path /mnt/mediavolume/downloads/transmission where sonarr picks up downloaded episodes
            - name: "media-pv"
              mountPath: /downloads/complete
              subPath: downloads/complete # path /mnt/mediavolume/downloads/transmission where sonarr picks up downloaded episodes
            - name: "media-pv"
              mountPath: /library
              subPath: library/tv # path /mnt/mediavolume/library/tv where sonarr moves and renames the episodes
            # - name: "mounted-network-share"
              # mountPath: /mnt/pandoraserver/video
            - name: "mounted-mediajunk-network-share"
              mountPath: /mnt/mediajunk/video
      volumes:
        - name: "media-pv"
          persistentVolumeClaim:
            claimName: nfs-media-pv-claim
        - name: "mounted-network-share"
          hostPath:
            path: /mnt/pandoraserver/video
        - name: "mounted-mediajunk-network-share"
          hostPath:
            path: /mnt/mediajunk/video
        # - name: "nfs-vol"
          # nfs:
            # server: 192.168.1.204
            # path: /volume1/video
