sonarr/sonarr-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: home-media
  # labels:
    # app: sonarr
    # kubernetes.io/name: "sonarr"
spec:
  selector:
    app: sonarr
  ports:
  - port: 80
    targetPort: 8989
    protocol: TCP
  type: LoadBalancer
