sonarr/sonarr-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: home-media
spec:
  rules:
  - host: sonarr.momochan.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: sonarr-service
            port:
              number: 80
        pathType: Prefix
